--- a/glob-launcher/glob-launcher.cabal
+++ b/glob-launcher/glob-launcher.cabal
@@ -2,7 +2,7 @@
 --  documentation, see http://haskell.org/cabal/users-guide/
 
 name:                glob-launcher
-version:             0.0.8.10
+version:             0.0.8.30
 synopsis:            The launcher of Glob.
 description:         The launcher of Glob.
 license:             AgasaLicense
@@ -23,7 +23,6 @@ flag launch-docker
   description:       Build the launcher of docker
   default:           False
 
-
 flag with-postgresql
   description:       Use PostgreSQL for database
   default:           False
@@ -40,11 +39,14 @@ executable launch.docker
   build-depends:       base >=4.8 && <4.9
                      , yaml
                      , cmdargs
-                     , glob-core >= 0.0.8.1
-                     , glob-main >= 0.0.8.1
+                     , glob-core >= 0.0.8.30
+                     , glob-main >= 0.0.8.30
+                     , template-haskell
   hs-source-dirs:      launch.docker
   default-language:    Haskell2010
   ghc-options:       -Wall -O2 -threaded
 
   if flag(with-tls)
     cpp-options:     -DWithTls
+  if flag(with-postgresql)
+    cpp-options:     -DWithPostgres
