--- a/daocloud.yml
+++ b/daocloud.yml
@@ -17,7 +17,7 @@ install:
 before_script:
   - export PATH=/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$PATH
 
-  
+
 script:
   - export PATH=/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$PATH
   - mkdir dist
@@ -26,7 +26,7 @@ script:
   - cd ../glob-main
   - cabal install $GLOB_TLS
   - cd ../glob-launcher
-  - cabal configure $GLOB_LA $GLOB_TLSA
+  - cabal configure $GLOB_LA $GLOB_TLS $GLOB_DB
   - cabal build
   - cp -r dist  ../dist
   - cd ..
