--- a/glob-core/glob-core.cabal
+++ b/glob-core/glob-core.cabal
@@ -193,5 +193,7 @@ library
     cpp-options:     -DWithMySQL
     if flag(unlimit-version)
       build-depends: persistent-mysql
+                   , mysql-simple
     else
       build-depends: persistent-mysql >= 0.1.1 && <= 0.2
+                   , mysql-simple >= 0.2 && <= 0.3
