--- a/dockerfiles/DaoCloud/Dockerfile
+++ b/dockerfiles/DaoCloud/Dockerfile
@@ -9,6 +9,7 @@ RUN echo "deb http://apt.postgresql.org/pub/repos/apt/ trusty-pgdg main" > /etc/
 RUN wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add -
 RUN apt-get update && apt-get -y install postgresql-server-dev-9.4
 RUN cd /src && cabal update && cabal install -j9 directory process persistent-template yesod persistent-postgresql warp-tls cmdargs
+RUN cd /src && cabal install glob-auth/
 RUN cd /src && cabal install glob-core/ -fwith-postgresql
 RUN cd /src && cabal install glob-main/
 RUN cd /src && cabal install glob-launcher/ -flaunch-docker -fwith-postgresql
