--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-# Glob
+dga# Glob
 
 env:
   - CABALVER=1.22 GHCVER=7.10.3 GLOB_DB="-fwith-postgresql" GLOB_TLS="-f-with-tls" GLOB_LA="-flaunch-docker" GLOB_DF="./dockerfiles/Travis-CI/PostgreSQL/Dockerfile" GLOB_DT="postgres"
@@ -14,21 +14,21 @@ before_install:
   - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
   - "sudo add-apt-repository -y ppa:hvr/ghc"
   - "sudo apt-get update"
-  - "sudo apt-get -y install ghc-$GHCVER cabal-install-$CABALVER"
+  - "sudo apt-get -y install ghc-$GHCVER cabal-install-$CABALVER llvm"
   - "export PATH=/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$PATH"
   - "cabal update"
   - "cabal install -j9 directory process persistent-template yesod persistent-postgresql persistent-mongoDB warp-tls cmdargs SHA"
 script:
   - mkdir dist
   - cd glob-auth
-  - cabal install
+  - cabal install --ghc-options=-fllvm
   - cd ../glob-core
   - cabal install $GLOB_DB $GLOB_TLS
-  - cd ../glob-main
+  - cd ../glob-main --ghc-options=-fllvm
   - cabal install $GLOB_TLS
-  - cd ../glob-launcher
-  - cabal configure $GLOB_LA $GLOB_TLS $GLOB_DB
-  - cabal build
+  - cd ../glob-launcher --ghc-options=-fllvm
+  - cabal configure $GLOB_LA $GLOB_TLS $GLOB_DB --ghc-options=-fllvm
+  - cabal build --ghc-options=-fllvm
   - cp -r dist  ../dist
   - cd ..
 after_script: |
