--- a/glob-launch/glob-launch.cabal
+++ b/glob-launch/glob-launch.cabal
@@ -2,7 +2,7 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                glob-launch
-version:             0.9.0.0
+version:             0.0.9.0
 synopsis:            A blog
 description:         A blog framework
 license:             AllRightsReserved
@@ -60,8 +60,8 @@ executable glob-launch
                      , yesod-core >= 1.4.20
                      , cmdargs >= 0.10.10
   hs-source-dirs:      src/launch
-                     -- , src
   default-language:    Haskell2010
+  ghc-options:         -threaded
   if flag(with-noexe)
     buildable: False
   if flag(with-utf8)
