--- a/integration/StackSolver/stack7103.yaml
+++ b/integration/StackSolver/stack7103.yaml
@@ -36,10 +36,10 @@ resolver: lts-6.9
 # non-dependency (i.e. a user package), and its test suites and benchmarks
 # will not be run. This is useful for tweaking upstream packages.
 packages:
-- glob-auth/
-- glob-core/
-- glob-launch/
-- glob-ih/
+- ../../glob-auth/
+- ../../glob-core/
+- ../../glob-launch/
+- ../../glob-ih/
 
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
