--- a/glob-ih/glob-ih.cabal
+++ b/glob-ih/glob-ih.cabal
@@ -2,7 +2,7 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                glob-ih
-version:             0.0.9.0
+version:             0.0.9.10
 -- synopsis:
 -- description:
 license:             AllRightsReserved
@@ -15,12 +15,18 @@ build-type:          Simple
 extra-source-files:  ChangeLog.md
 cabal-version:       >=1.10
 
+flag with-utf8
+  default: True
+  description: Setting and using utf8
+
 executable glob-ih
   main-is:             Main.lhs
   -- other-modules:
-  -- other-extensions:
+  default-extensions:  CPP
   build-depends:       base >=4.7 && <4.10
                      , glob-auth >= 0.0.9
                      , time >= 1.6
   hs-source-dirs:      src
   default-language:    Haskell2010
+  if flag(with-utf8)
+    cpp-options: -DWithUTF8
