--- a/glob-auth/glob-auth.cabal
+++ b/glob-auth/glob-auth.cabal
@@ -2,7 +2,7 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                glob-auth
-version:             0.0.9.1
+version:             0.0.9.2
 synopsis:            A blog.
 description:         A blog framework.
 license:             AllRightsReserved
@@ -25,6 +25,7 @@ library
   build-depends:       base >=4.7 && <4.10
                      , SHA >= 1.6
                      , bytestring >= 0.10.8
+                     , template-haskell >= 2.11
                      , text >= 1.2
   hs-source-dirs:      src
   default-language:    Haskell2010
