--- a/stack.yaml
+++ b/stack.yaml
@@ -39,7 +39,8 @@ packages:
 - glob-auth/
 - glob-core/
 - glob-launch/
-- glob-ih/
+- glob-tool/glob-ih/
+- glob-tool/glob-mk/
 
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
