update;add jq of the list to be install by  apt

--- a/integration/Dockerfiles/hub/Dockerfile
+++ b/integration/Dockerfiles/hub/Dockerfile
@@ -1,7 +1,7 @@
 # build
 FROM index.docker.io/library/debian:latest
 MAINTAINER qinka
-RUN apt update && apt install -y libgmp10 wget curl
+RUN apt update && apt install -y libgmp10 wget curl jq
 ADD bin /usr/bin
 CMD start.sh fromenv
 EXPOSE 3000
