--- a/stack.yaml
+++ b/stack.yaml
@@ -15,7 +15,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: nightly-2016-07-15
+resolver: lts-7.0
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -39,7 +39,10 @@ packages:
 - glob-auth/
 - glob-core/
 - glob-launch/
-- glob-tool/
+- glob-tools/glob-tool
+- glob-tools/glob-ih
+- glob-tools/glob-timecheck
+- glob-tools/glob-newpost
 
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
