--- a/glob-core/glob-core.cabal
+++ b/glob-core/glob-core.cabal
@@ -2,7 +2,7 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                glob-core
-version:             0.0.10.20:q
+version:             0.0.10.20
 synopsis:            A blog.
 description:         A blog framework.
 license:             AllRightsReserved
