--- a/glob-core/glob-core.cabal
+++ b/glob-core/glob-core.cabal
@@ -2,7 +2,7 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                glob-core
-version:             0.0.10.22
+version:             0.0.10.23
 synopsis:            A blog.
 description:         A blog framework.
 license:             AllRightsReserved
@@ -15,6 +15,11 @@ build-type:          Simple
 extra-source-files:  ChangeLog.md
 cabal-version:       >=1.10
 
+flag debug-info
+     description: To print debug info or not
+     default: False
+
+                     
 library
   exposed-modules:   Glob.Common
                    , Glob.Core
@@ -47,6 +52,7 @@ library
                      , blaze-markup >= 0.7
                      , blaze-html >= 0.8.1
                      , bytestring >= 0.10.8
+                     , cmdargs >= 0.10.10
                      , conduit >= 1.2.6
                      , directory >= 1.2.6
                      , fast-logger >= 2.4
@@ -73,3 +79,9 @@ library
   hs-source-dirs:      src
                      , import
   default-language:    Haskell2010
+  if flag(debug-info)
+     GHC-Options: -DDEBUG
+     if !os(windows)
+      CC-Options: "-DDEBUG"
+     else
+      CC-Options: "-DNDEBUG"
