--- a/integration/Dockerfiles/hub/Dockerfile
+++ b/integration/Dockerfiles/hub/Dockerfile
@@ -3,5 +3,7 @@ FROM index.docker.io/library/debian:latest
 MAINTAINER qinka
 RUN apt update && apt install -y libgmp10 wget curl jq
 ADD bin /usr/bin
-CMD start.sh fromenv
+COPY entrypoint.sh entrypoint
+ENTRYPOINT ["/entrypoint"]
+#CMD start.sh fromenv
 EXPOSE 3000
