--- a/.gitignore
+++ b/.gitignore
@@ -13,10 +13,12 @@ test.config
 .stack-work
 .cabal-sandbox.bak
 
-test
 # For VS Code
 
 .vscode
+TEST
+test
+
 \#*\#
 .markdown-preview.html
 .\#*
