--- a/.travis.yml
+++ b/.travis.yml
@@ -10,14 +10,14 @@ cache:
 # the matrix of settings
 matrix:
   include:
-    - env: GHC_VER=8.0.1 THREADED=t LLVM=3.7
+    - env: GHC_VER=8.0.1 THREADED=t LLVM=3.7 DEBUG=debug
       addons:
         apt:
           sources:
             - hvr-ghc
           packages:
             - ghc-8.0.1
-    - env: GHC_VER=8.0.1 THREADED=t
+    - env: GHC_VER=8.0.1 THREADED=t DEBUG=debug DOCKER=docker
       addons:
         apt:
           sources:
