--- a/.travis.yml
+++ b/.travis.yml
@@ -17,14 +17,27 @@ matrix:
             - hvr-ghc
           packages:
             - ghc-8.0.1
-    - env: GHC_VER=8.0.1 THREADED=t DEBUG=debug DOCKER=docker
+    - env: GHC_VER=8.0.1 THREADED=t DEBUG=debug
       addons:
         apt:
           sources:
             - hvr-ghc
           packages:
             - ghc-8.0.1
-
+    - env: GHC_VER=8.0.1 LLVM=3.7 DEBUG=debug
+      addons:
+        apt:
+          sources:
+            - hvr-ghc
+          packages:
+            - ghc-8.0.1
+    - env: GHC_VER=8.0.1 DEBUG=debug IS_DOCKER=docker
+      addons:
+        apt:
+          sources:
+            - hvr-ghc
+          packages:
+            - ghc-8.0.1
 # using docker
 services:
   - docker
