--- a/.travis.yml
+++ b/.travis.yml
@@ -10,28 +10,14 @@ cache:
 # the matrix of settings
 matrix:
   include:
-    - env: GHC_VER=8.0.1 THREADED=t LLVM=3.7 DEBUG=debug
+    - env: GHC_VER=8.0.1 THREADED=t LLVM=3.7 IS_DOCKER=docker
       addons:
         apt:
           sources:
             - hvr-ghc
           packages:
             - ghc-8.0.1
-    - env: GHC_VER=8.0.1 THREADED=t DEBUG=debug
-      addons:
-        apt:
-          sources:
-            - hvr-ghc
-          packages:
-            - ghc-8.0.1
-    - env: GHC_VER=8.0.1 LLVM=3.7 DEBUG=debug
-      addons:
-        apt:
-          sources:
-            - hvr-ghc
-          packages:
-            - ghc-8.0.1
-    - env: GHC_VER=8.0.1 DEBUG=debug IS_DOCKER=docker
+    - env: GHC_VER=8.0.1 THREADED=t IS_DOCKER=docker
       addons:
         apt:
           sources:
