--- a/glob-auth/glob-auth.cabal
+++ b/glob-auth/glob-auth.cabal
@@ -2,11 +2,11 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                glob-auth
-version:             0.0.10.1
-synopsis:            A blog.
-description:         A blog framework.
+version:             0.1.0.0
+synopsis:            The authentication part of the glob.
+description:         Just a small blog backend.
 license:             AllRightsReserved
--- license-file:        LICENSE
+license-file:        LICENSE
 author:              Qinka
 maintainer:          qinka@live.com
 copyright:           2016 Qinka <qinka@live.com>
@@ -15,17 +15,23 @@ build-type:          Simple
 extra-source-files:  ChangeLog.md
 cabal-version:       >=1.10
 
-
 library
   exposed-modules:     Glob.Auth.Token
   other-modules:       Paths_glob_auth
-  default-extensions:  FlexibleContexts
-                     , OverloadedStrings
-                     , TypeFamilies
-  build-depends:       base >=4.7 && <4.10
+  build-depends:       base >= 4.7 && < 4.10
                      , SHA >= 1.6
                      , bytestring >= 0.10.8
+                     , gitrev >= 1.2
                      , template-haskell >= 2.11
                      , text >= 1.2
-  hs-source-dirs:      src
+  default-extensions:  FlexibleContexts
+                       OverloadedStrings
+                       TypeFamilies
+  hs-source-dirs:      lib
   default-language:    Haskell2010
+
+source-repository head
+  type: git
+  location: https://github.com/Qinka/Glob.git
+  branch: 0.0.10-dev
+  subdir: glob-auth
