--- a/glob-core/glob-core.cabal
+++ b/glob-core/glob-core.cabal
@@ -2,11 +2,10 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                glob-core
-version:             0.0.10.31
-synopsis:            A blog.
-description:         A blog framework.
-license:             AllRightsReserved
--- license-file:        LICENSE
+version:             0.1.0.0
+synopsis:            The core of the glob.
+description:         Just a small blog backend.
+license-file:        LICENSE
 author:              Qinka
 maintainer:          qinka@live.com
 copyright:           2016 Qinka <qinka@live.com>
@@ -21,33 +20,33 @@ flag debug-info
 
                      
 library
-  exposed-modules:   Glob.Common
-                   , Glob.Common.Infos
-                   , Glob.Core
-                   , Glob.Model
-  other-modules:     Glob.Auth
-                   , Glob.Config
-                   , Glob.Foundation
-                   , Glob.Handler
-                   , Glob.Handler.Fetch
-                   , Glob.Handler.Internal
-                   , Glob.Handler.Query
-                   , Glob.Handler.Query.Parser
-                   , Glob.Types
-                   , Import
-                   , Import.ByteStringUtf8
-                   , Import.Logger
-                   , Import.Text
-                   , Import.TH
-                   , Import.Wai
-                   , Paths_glob_core
+  exposed-modules:     Glob.Common
+                       Glob.Common.Infos
+                       Glob.Core
+                       Glob.Model
+  other-modules:       Glob.Auth
+                       Glob.Config
+                       Glob.Foundation
+                       Glob.Handler
+                       Glob.Handler.Fetch
+                       Glob.Handler.Internal
+                       Glob.Handler.Query
+                       Glob.Handler.Query.Parser
+                       Glob.Types
+                       Import
+                       Import.ByteStringUtf8
+                       Import.Logger
+                       Import.Text
+                       Import.TH
+                       Import.Wai
+                       Paths_glob_core
   default-extensions:  FlexibleContexts
-                     , OverloadedStrings
-                     , QuasiQuotes
-                     , RecordWildCards
-                     , TypeFamilies
-                     , TemplateHaskell
-                     , ViewPatterns
+                       OverloadedStrings
+                       QuasiQuotes
+                       RecordWildCards
+                       TypeFamilies
+                       TemplateHaskell
+                       ViewPatterns
   build-depends:       aeson >= 0.10
                      , base >= 4.7 && < 4.10
                      , blaze-markup >= 0.7
@@ -58,7 +57,7 @@ library
                      , directory >= 1.2.6
                      , fast-logger >= 2.4
                      , gitrev >= 1.2
-                     , glob-auth >= 0.0.9.0
+                     , glob-auth >= 0.1
                      , http-date >= 0.0.6
                      , http-types >= 0.9.1
                      , monad-control >= 1.0.1
@@ -74,17 +73,21 @@ library
                      , template-haskell >= 2.11
                      , transformers >= 0.5.2
                      , wai >= 3.2
-                     , wai-extra >= 3.0.15
                      , wai-logger >= 2.3
                      , warp >= 3.2.7
                      , xml-hamlet >= 0.4.0.10
                      , yesod-core >= 1.4.20
-  hs-source-dirs:      src
-                     , import
+  hs-source-dirs:      lib
+                       import
   default-language:    Haskell2010
   if flag(debug-info)
-     GHC-Options: -DDEBUG
-     if !os(windows)
-      CC-Options: "-DDEBUG"
-     else
-      CC-Options: "-DNDEBUG"
+      cpp-options: "-DDEBUG"
+
+
+
+
+source-repository head
+  type: git
+  location: https://github.com/Qinka/Glob.git
+  subdir: glob-core
+  branch: 0.0.10-dev
