--- a/glob-launch/glob-launch.cabal
+++ b/glob-launch/glob-launch.cabal
@@ -2,11 +2,11 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                glob-launch
-version:             0.0.10.5
-synopsis:            A blog
-description:         A blog framework
+version:             0.1.0.0
+synopsis:            The launch of glob.
+description:         Just a small blog backend.
 license:             AllRightsReserved
--- license-file:        LICENSE
+license-file:        LICENSE
 author:              Qinka
 maintainer:          qinka@live.com
 copyright:           2016 Qinka <qinka@live.com>
@@ -22,32 +22,41 @@ flag with-noexe
   default: False
   description: Do not build executable file
 
-
+flag middleware-gzip
+  default: True
+  description: turn on the middleware of gzip
+  
 library
   exposed-modules:     Glob.Launch
   other-modules:       Paths_glob_launch
-  default-extensions:  TypeFamilies
+  default-extensions:  CPP
+                       TypeFamilies
   build-depends:       aeson >= 0.10
                      , base >=4.7 && <4.10
                      , bytestring >= 0.10.8
+                     , gitrev >= 1.2
                      , glob-core >= 0.0.9
                      , template-haskell >= 2.11
                      , text >= 1.2
+                     , wai >= 3.2
+                     , wai-extra >= 3.0.15
                      , warp >= 3.2.7
                      , yaml >= 0.8.15
                      , yesod-core >= 1.4.20
   hs-source-dirs:      src
   default-language:    Haskell2010
+  if flag(middleware-gzip)
+     cpp-options: -DWithMiddlewareGzip
 
 executable glob-launch
   main-is:             Main.lhs
   other-modules:       Paths_glob_launch
   default-extensions:  CPP
-                     , DeriveDataTypeable
-                     , OverloadedStrings
-                     , QuasiQuotes
-                     , TemplateHaskell
-                     , TypeFamilies
+                       DeriveDataTypeable
+                       OverloadedStrings
+                       QuasiQuotes
+                       TemplateHaskell
+                       TypeFamilies
   build-depends:       aeson >= 0.10
                      , base >=4.7 && <4.10
                      , bytestring >= 0.10.8
@@ -66,3 +75,9 @@ executable glob-launch
     buildable: False
   if flag(with-utf8)
     cpp-options: -DWithUTF8
+
+source-repository head
+  type: git
+  location: https://github.com/Qinka/Glob.git
+  subdir: glob-core
+  branch: 0.0.10-dev
