--- a/stack.yaml
+++ b/stack.yaml
@@ -16,7 +16,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: lts-7.0
+resolver: lts-7.8
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -43,14 +43,16 @@ packages:
 - glob-tools/glob-tool
 - glob-tools/glob-ih
 - glob-tools/glob-timecheck
-- glob-tools/glob-newpost
+#- glob-tools/glob-newpost
 
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
 extra-deps: []
 
 # Override default flag values for local packages and extra-deps
-flags: {}
+flags:
+  glob-core:
+    debug-info: true
 
 # Extra package databases containing global packages
 extra-package-dbs: []
