--- a/stack.yaml
+++ b/stack.yaml
@@ -16,7 +16,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: lts-7.8
+resolver: nightly-2017-01-28
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
