--- a/glob-tools/glob-ih/glob-ih.cabal
+++ b/glob-tools/glob-ih/glob-ih.cabal
@@ -23,7 +23,11 @@ executable glob-ih
   other-modules:       Paths_glob_ih
   default-extensions:  CPP
   build-depends:       base >=4.7 && <4.10
+                     , base64-bytestring >= 1.0.0
+                     , bytestring >= 0.10.8
+                     , cryptonite >= 0.21
                      , glob-auth >= 0.1
+                     , text >= 1.2.2
                      , time >= 1.6
   hs-source-dirs:      src
   default-language:    Haskell2010
