--- a/glob-tools/glob-timecheck/glob-timecheck.cabal
+++ b/glob-tools/glob-timecheck/glob-timecheck.cabal
@@ -5,11 +5,10 @@ name:                glob-timecheck
 version:             0.1.0.0
 synopsis:            a serial tool of glob
 description:         the tool transform tokens and other things to curl's options
-license:             AllRightsReserved
--- license-file:        LICENSE
+license-file:        LICENSE
 author:              Qinka
 maintainer:          qinka@live.com
-copyright:           2016 Qinka <qinka@live.com>
+Copyright:           Copymiddle (C-M) 2016-2017 Qinka <qinka@live.com>
 build-type:          Simple
 extra-source-files:  ChangeLog.md
 cabal-version:       >=1.10
