--- a/glob-core/glob-core.cabal
+++ b/glob-core/glob-core.cabal
@@ -8,7 +8,7 @@ description:         Just a small blog backend.
 license-file:        LICENSE
 author:              Qinka
 maintainer:          qinka@live.com
-copyright:           2016-2017 Qinka <qinka@live.com>
+copyright:           Copymiddle (C-M) 2016-2017 Qinka <qinka@live.com>
 category:            Web
 build-type:          Simple
 extra-source-files:  ChangeLog.md
