--- a/glob-tools/glob-update/glob-update.cabal
+++ b/glob-tools/glob-update/glob-update.cabal
@@ -3,14 +3,12 @@
 
 name:                glob-update
 version:             0.1.0.50
--- synopsis:            
--- description:         
-license:             BSD3
+synopsis:            A tool used to update.
+description:         A tool which can create the Makefile.
 license-file:        LICENSE
 author:              Qinka
-maintainer:          qinka@live.com
--- copyright:           
--- category:            
+maintainer:          Qinka <qinka@live.com>
+copyright:           Copymiddle (C-M) 2016-2017 Qinka <qinka@live.com>
 build-type:          Simple
 extra-source-files:  ChangeLog.md
 cabal-version:       >=1.10
