--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ cache:
 # the matrix of settings
 matrix:
   include:
-    - env: GHC_VER=8.0.2 THREADED=t LLVM=3.7 DEBUG=debug
+    - env: GHC_VER=8.0.2 THREADED=t LLVM=3.7 IS_DOCKER=docker
       addons:
         apt:
           sources:
@@ -19,15 +19,15 @@ matrix:
             - wget
             - curl
             - ghc-8.0.2
-    - env: GHC_VER=8.0.2 THREADED=t DEBUG=debug IS_DOCKER=docker
+    - env: GHC_VER=8.0.2 THREADED=t IS_DOCKER=docker
       addons:
         apt:
           sources:
-            - wget
-            - curl
             - hvr-ghc
           packages:
             - ghc-8.0.2
+            - curl
+            - wget
 
 # using docker
 services:
