--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ cache:
 # the matrix of settings
 matrix:
   include:
-    - env: GHC_VER=8.0.2 THREADED=t LLVM=3.7 IS_DOCKER=docker
+    - env: GHC_VER=8.0.2 THREADED=t LLVM=3.7 DEBUG=debug
       addons:
         apt:
           sources:
@@ -19,7 +19,7 @@ matrix:
             - wget
             - curl
             - ghc-8.0.2
-    - env: GHC_VER=8.0.2 THREADED=t IS_DOCKER=docker
+    - env: GHC_VER=8.0.2 THREADED=t DEBUG=debug IS_DOCKER=docker
       addons:
         apt:
           sources:
@@ -28,6 +28,7 @@ matrix:
             - ghc-8.0.2
             - curl
             - wget
+
 
 # using docker
 services:
